--- a/.github/workflows/invalidate-cache.yaml
+++ b/.github/workflows/invalidate-cache.yaml
@@ -38,28 +38,24 @@ jobs:
           echo "CACHE_PREFIX=$cache_prefix" >> $GITHUB_ENV
         env:
           # COMMENT: ${{ github.event.comment.body }}
-          COMMENT: texlive-drafts-
+          COMMENT: pdf-fr-01de0aedf58e8
 
       - name: List caches
         run: |
           gh api repos/${{ github.repository }}/actions/caches | jq -c '{caches: [.actions_caches[] | select(.key | startswith("${{ env.CACHE_PREFIX }}"))]}' > caches.json
-          # jq '.caches[] | { key,size: (if .size_in_bytes < 1024 then "\(.size_in_bytes) bytes"
-          #     elif .size_in_bytes < 1048576 then "\(.size_in_bytes/1024 | floor) KB"
-          #     elif .size_in_bytes < 1073741824 then "\(.size_in_bytes/1048576 | floor) MB"
-          # else "\(.size_in_bytes/1073741824 | floor) GB" end), ref, created_at, last_accessed_at, id, version }' caches.json
 
       - name: Add comment
         run: |
           if [[ $(jq '.caches | length == 0' caches.json) == "true" ]]; then
             echo 'No caches found matching prefix `${{ env.CACHE_PREFIX }}`' >> boxy.txt
           else
-            CACHE_COUNT=$(jq '.caches | length' caches.json)
-          jq '.caches[] | { key,size: (if .size_in_bytes < 1024 then "\(.size_in_bytes) bytes"
-              elif .size_in_bytes < 1048576 then "\(.size_in_bytes/1024 | floor) KB"
-              elif .size_in_bytes < 1073741824 then "\(.size_in_bytes/1048576 | floor) MB"
-          else "\(.size_in_bytes/1073741824 | floor) GB" end), ref, created_at, last_accessed_at, id, version }' caches.json >> formatted-caches.txt
+            echo "CACHE_COUNT=$(jq '.caches | length' caches.json) " >> $GITHUB_ENV
+            jq '.caches[] | { key,size: (if .size_in_bytes < 1024 then "\(.size_in_bytes) bytes"
+                elif .size_in_bytes < 1048576 then "\(.size_in_bytes/1024 | floor) KB"
+                elif .size_in_bytes < 1073741824 then "\(.size_in_bytes/1048576 | floor) MB"
+            else "\(.size_in_bytes/1073741824 | floor) GB" end), ref, created_at, last_accessed_at, id, version }' caches.json >> formatted-caches.txt
             (
-              echo 'Found $CACHE_COUNT caches 💾 matching prefix `${{ env.CACHE_PREFIX }}`'
+              echo 'Deleted ${{ env.CACHE_COUNT }} caches 💾 matching prefix `${{ env.CACHE_PREFIX }}`'
               echo "<details><summary>Click to see the list</summary>"
               echo
               echo '```json'
