--- a/.github/workflows/invalidate-cache.yaml
+++ b/.github/workflows/invalidate-cache.yaml
@@ -43,7 +43,7 @@ jobs:
           echo "CACHE_PREFIX=$cache_prefix" >> $GITHUB_ENV
         env:
           # COMMENT: ${{ github.event.comment.body }}
-          COMMENT: texlive-drafts-
+          COMMENT: texlive-drafts-dude-
 
       - name: List caches
         run: |
@@ -52,7 +52,7 @@ jobs:
       - name: Add comment
         run: |
           if [[ $(jq '.caches | length == 0' caches.json) == "true" ]]; then
-            echo 'No caches found matching prefix `${{ env.CACHE_PREFIX }}`' >> body.txt
+            echo 'No caches found matching prefix `${{ env.CACHE_PREFIX }}` 🤨' >> body.txt
           else
             CACHE_COUNT=$(jq '.caches | length' caches.json)
             gh cache list -k ${{ env.CACHE_PREFIX }} --json id -q '.[].id' | xargs -n 1 gh cache delete
@@ -61,8 +61,8 @@ jobs:
                 elif .size_in_bytes < 1073741824 then "\(.size_in_bytes/1048576 | floor) MB"
             else "\(.size_in_bytes/1073741824 | floor) GB" end), ref, created_at, last_accessed_at, id, version }' caches.json >> formatted-caches.txt
             (
-              echo "Invalidated ${CACHE_COUNT} caches 💾 matching prefix \`${{ env.CACHE_PREFIX }}\`"
-              echo "<details><summary>Click to see the list</summary>"
+              echo "Invalidated ${CACHE_COUNT} cache(s) 💾 matching prefix \`${{ env.CACHE_PREFIX }}\`"
+              echo "<details><summary>Click to see the list:</summary>"
               echo
               echo '```json'
               cat formatted-caches.txt
