--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -6,12 +6,12 @@ on:
       - main
     paths:
       - 'draft-scenarios/**'
-      - '.github/workflows/**'
+      - '.github/workflows/build-and-publish-draft.yaml'
   pull_request:
     branches: [main]
     paths:
       - 'draft-scenarios/**'
-      - '.github/workflows/**'
+      - '.github/workflows/build-and-publish-draft.yaml'
 
 env:
   ARTIFACT_RETENTION_DAYS: 1
