Don't install inkscape on cache hit

--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Cache Inkscape artifacts
         if: steps.cache-pdf.outputs.cache-hit != 'true'
+        id: cache-inkscape
         uses: actions/cache@v4
         with:
           path: |
@@ -68,7 +69,7 @@ jobs:
         if: steps.cache-pdf.outputs.cache-hit != 'true'
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: "inkscape"
+          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1
@@ -181,6 +182,7 @@ jobs:
 
       - name: Cache Inkscape artifacts
         uses: actions/cache@v4
+        id: cache-inkscape
         with:
           path: |
             ./svg-inkscape
@@ -205,7 +207,7 @@ jobs:
       - name: Compile monochrome draft book
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: "inkscape"
+          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
