--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Cache Inkscape artifacts
         if: steps.cache-pdf.outputs.cache-hit != 'true'
-        id: cache-inkscape;w
+        id: cache-inkscape
         uses: actions/cache@v4
         with:
           path: |
