Restore inkscape as package

--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -69,7 +69,7 @@ jobs:
         if: steps.cache-pdf.outputs.cache-hit != 'true'
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
+          extra_system_packages: "inkscape"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1
@@ -207,7 +207,7 @@ jobs:
       - name: Compile monochrome draft book
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
+          extra_system_packages: "inkscape"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
