--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -88,7 +88,7 @@ jobs:
         if: steps.cache-pdf.outputs.cache-hit != 'true'
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
+          extra_system_packages: "inkscape"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1
@@ -261,7 +261,7 @@ jobs:
       - name: Compile monochrome mission book
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: ${{ steps.cache-inkscape.outputs.cache-hit != 'true' && 'inkscape' || '' }}
+          extra_system_packages: "inkscape"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
