--- a/po4a.cfg
+++ b/po4a.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] pl fr cs de
+[po4a_langs] pl fr cs
 [po4a_paths] translations/$master/$master.pot $lang:translations/$master/$lang.po
 
 [type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex
