--- a/tools/container/Dockerfile
+++ b/tools/container/Dockerfile
@@ -12,7 +12,9 @@ RUN apk add --no-cache wget && \
 FROM alpine:latest
 
 ENV PATH="/opt/texlive/texdir/bin/x86_64-linuxmusl:/opt/po4a:${PATH}" \
-    PERL5LIB="/opt/po4a/lib"
+    PERL5LIB="/opt/po4a/lib" \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8
 
 COPY --from=po4a-builder /po4a /opt/po4a
 
@@ -24,24 +26,27 @@ RUN apk --no-cache add \
     curl \
     diffutils \
     fontconfig \
+    gettext \
+    gettext-dev \
     ghostscript \
-    gnupg \
     git \
+    gnupg \
     grep \
     imagemagick \
     inkscape \
     make \
+    musl-locales \
+    ncurses \
+    opensp \
     perl \
-    poppler-utils \
-    tar \
-    wget \
-    xz \
+    perl-dev \
     perl-unicode-linebreak \
     perl-yaml \
-    gettext \
-    gettext-dev \
-    perl-dev \
-    opensp \
+    poppler-utils \
+    tar \
+    util-linux \
+    wget \
+    xz \
     && apk add --no-cache --virtual .build-deps \
         build-base \
         perl-app-cpanminus \
@@ -130,7 +135,7 @@ RUN mkdir -p /etc/fonts/conf.d && \
       make \
       xz \
       gnupg \
-    rm -rf \
+    && rm -rf \
       /root/.gnupg \
       /root/.wget-hsts \
       /usr/share/man/* \
