--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr"]
+        language: ["en", "pl", "cs", "fr", "de"]
 
     steps:
       - name: Set up repository
@@ -203,7 +203,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr"]
+        language: ["en", "pl", "cs", "fr", "de"]
 
     steps:
       - name: Set up repository
@@ -288,7 +288,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["pl", "cs", "fr"]
+        language: ["pl", "cs", "fr", "de"]
 
     steps:
       - name: Download PDFs
@@ -313,7 +313,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr"]
+        language: ["en", "pl", "cs", "fr", "de"]
     steps:
       - name: Create dir
         run: mkdir ${{ matrix.language }}
