--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,23 @@
 {
   "image": "ghcr.io/qwrtln/homm3bg:latest",
-  "entrypoint": ["/bin/bash"],
   "customizations": {
     "vscode": {
       "extensions": [
         "streetsidesoftware.code-spell-checker",
         "mrorz.language-gettext",
         "James-Yu.latex-workshop"
-      ]
+      ],
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "terminal.integrated.profiles.linux": {
+          "bash": {
+            "path": "/bin/bash"
+          }
+        }
+      }
     }
+  },
+  "containerEnv": {
+    "SHELL": "/bin/bash"
   }
 }
