--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -1,11 +1,18 @@
 name: Build individual scenarios
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches: [main]
+ workflow_call:
+   inputs:
+     scenario_type:
+       description: 'Type of scenarios to build'
+       required: false
+       type: string
+       default: 'clash'
+     language:
+       description: 'Language to build'
+       required: false
+       type: string
+       default: 'en'
 
 env:
   ARTIFACT_RETENTION_DAYS: 1
@@ -24,8 +31,8 @@ jobs:
         id: find_scenarios
         run: |
           # SCENARIOS=$(find clash coops campaigns -type f -name "*tex" -not -regex ".*main.*" -exec basename -s .tex {} \;)
-          SCENARIOS=$(find clash -type f -name "*tex" -not -regex ".*main.*" -exec basename -s .tex {} \;)
-          echo "matrix=$(echo "$SCENARIOS" | jq -R -s -c 'split("\n") | map(select(length > 0)) as $scenarios | ["en", "pl"] as $languages | [$scenarios[] | . as $scenario | $languages[] | {scenario: $scenario, language: .}] | {include: .}')" >> $GITHUB_OUTPUT
+          SCENARIOS=$(find ${{ inputs.scenario_type }} -type f -name "*tex" -not -regex ".*main.*" -exec basename -s .tex {} \;)
+          echo "matrix=$(echo "$SCENARIOS" | jq -R -s -c 'split("\n") | map(select(length > 0)) | {scenario: .}')" >> $GITHUB_OUTPUT
 
   build_scenarios:
     runs-on: ubuntu-latest
@@ -100,7 +107,7 @@ jobs:
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1
-          root_file: main_${{ matrix.language }}.tex
+          root_file: main_${{ inputs.language }}.tex
 
       - name: Optimize PDF
         if: steps.cache-pdf.outputs.cache-hit != 'true'
@@ -109,10 +116,10 @@ jobs:
         with:
           file-name: main_${{ matrix.language }}.pdf
           quality-level: prepress
-          output-file: ${{ matrix.scenario }}_${{ matrix.language }}.pdf
+          output-file: ${{ matrix.scenario }}_${{ inputs.language }}.pdf
 
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.scenario }}_${{ matrix.language }}
-          path: ${{ matrix.scenario }}_${{ matrix.language }}.pdf
+          name: ${{ matrix.scenario }}_${{ inputs.language }}
+          path: ${{ matrix.scenario }}_${{ inputs.language }}.pdf
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
