--- a/.github/workflows/trigger-build-scenarios.yaml
+++ b/.github/workflows/trigger-build-scenarios.yaml
@@ -7,14 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  trigger_build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger workflow
-        run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/build-individual-scenarios.yaml/dispatches \
-            -d '{"ref":"${{ github.ref }}","inputs":{"scenario_type":"clash","language":"en"}}'
+  call_build:
+    uses: ./.github/workflows/build-individual-scenarios.yaml
+    with:
+      scenario_type: "clash"
+      language: "en"
