Move scenarios to the mission book

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -14,6 +14,7 @@
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex
 [type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex
 [type: latex] clash/the_fractured_kingdoms.tex $lang:clash/translated/$lang/the_fractured_kingdoms.tex
+[type: latex] clash/trial_by_combat.tex $lang:clash/translated/$lang/trial_by_combat.tex
 
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex
@@ -22,11 +23,12 @@
 [type: latex] campaigns/castle_sicilian_dragon.tex $lang:campaigns/translated/$lang/castle_sicilian_dragon.tex
 [type: latex] campaigns/castle_two_knights_defense.tex $lang:campaigns/translated/$lang/castle_two_knights_defense.tex
 
-[type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex
-[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex
+[type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex
 [type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex
-[type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex
+[type: latex] sections/random_scenario.tex $lang:sections/translated/$lang/random_scenario.tex
+[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex
+[type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex
 
 [options] --addendum-charset=UTF-8 \
           --localized-charset=UTF-8 \
